--- a/basic-react-components/6.6.md
+++ b/basic-react-components/6.6.md
@@ -1,159 +1,13 @@
-# Defining Events on Components
+# Composing Components
 
-To define events on components, events and event handlers/callbacks (discussed in Ch. 4 - 4.7 and Ch. 5 - 5.8) can be added to React nodes inside of a components `render` configuration option.
+If it is not obvious React components can make use of other React components. That is, when defining a component the `render` configuration function can contain references to other components. When a component contains another component it can be said that the parent component owns the child component (aka composition).
 
-In the code example, events are set on React nodes (via JSX) using what looks like component props.
+In the code below the `BadgeList` component contains/owns the `BadgeBill` and `BadgeTom` component.
 
-> [source code](https://jsfiddle.net/sjL64ogk/#tabs=js,result,html,resources)
+> [source code](https://jsfiddle.net/codylindley/0m9s4ow7/#tabs=js,result,html,resources)
 
-Basically, React when rendering a component looks for special React prop events (e.g. `onClick`) and treats these props differently from other props (all react events shown in table below). Obviously the difference being, that eventing is being wired up behind the scenes.
+### Notes
 
-Part of this wiring is auto binding the context of the handler/callback to the scope of the component instance. In the code example below the value of this inside of the handlers/callbacks will reference the component instance itself.
-
-> [source code](https://jsfiddle.net/gke6vmc9/#tabs=js,result,html,resources)
-
-React supports the following events and event specific syntheticEvent properties:
-
-<table>
-<tr>
-<th>Event Type/Category:</th>
-<th>Events:</th>
-<th>Event Specific Properties:</th>
-</tr>
-  <tr>
-  	<td><p>Clipboard</p></td>
-    <td>onCopy, onCut, onPaste</td>
-	<td>DOMDataTransfer, clipboardData</td>
-  </tr>
-  <tr>
-  	<td><p>Composition</p></td>
-    <td>onCompositionEnd, onCompositionStart, onCompositionUpdate</td>
-	<td>data</td>
-  </tr>
-  <tr>
-  	<td><p>Keyboard</p></td>
-    <td>onKeyDown, onKeyPress, onKeyUp</td>
-	<td>altKey,
-charCode,
-ctrlKey,
-getModifierState(key),
-key,
-keyCode,
-locale,
-location,
-metaKey,
-repeat,
-shiftKey,
-which</td>
-  </tr>
-  <tr>
-	  <td><p>Focus</p></td>
-	<td>onChange, onInput, onSubmit</td>
-  <td>DOMEventTarget,  relatedTarget</td>
-  </tr>
-  <tr>
-	<td><p>Form</p></td>
-  <td>onFocus, onBlur</td>
-  <td></td>
-  </tr>
-  <tr>
-	<td><p>Mouse</p></td>
-  <td>onClick, onContextMenu, onDoubleClick, onDrag, onDragEnd, onDragEnter, onDragExit
-onDragLeave, onDragOver, onDragStart, onDrop, onMouseDown, onMouseEnter, onMouseLeave
-onMouseMove, onMouseOut, onMouseOver, onMouseUp</td>
-  <td>altKey,
-button,
-buttons,
-clientX,
-clientY,
-ctrlKey,
-getModifierState(key),
-metaKey,
-pageX,
-pageY,
-DOMEventTarget relatedTarget,
-screenX,
-screenY,
-shiftKey,
-  </td>
-  </tr>
-  <tr>
-  <td><p>Selection</p></td>
-  <td>onSelect</td>
-  <td></td>
-  </tr>
-  <tr>
-  <td><p>Touch</p></td>
-  <td>onTouchCancel, onTouchEnd, onTouchMove, onTouchStart</td>
-  <td>
-  altKey
-  DOMTouchList changedTouches,
-  ctrlKey,
-  getModifierState(key),
-  metaKey,
-  shiftKey,
-  DOMTouchList targetTouches,
-  DOMTouchList touches,
-  </td>
-  </tr>
-  <tr>
-  <td><p>UI</p></td>
-  <td>onScroll</td>
-  <td>
-  detail,
-  DOMAbstractView view
-  </td>
-  </tr>
-  <tr>
-  <td><p>Wheel</p></td>
-  <td>onWheel</td>
-  <td>
-  deltaMode,
-  deltaX,
-  deltaY,
-  deltaZ,
-  </td>
-  </tr>
-
-  <tr>
-  <td><p>Media</p></td>
-  <td>onAbort, onCanPlay, onCanPlayThrough, onDurationChange, onEmptied, onEncrypted, onEnded, onError, onLoadedData, onLoadedMetadata, onLoadStart, onPause, onPlay, onPlaying, onProgress, onRateChange, onSeeked, onSeeking, onStalled, onSuspend, onTimeUpdate, onVolumeChange, onWaiting</td>
-  <td></td>
-  </tr>
-
-  <tr>
-  <td><p>Image</p></td>
-  <td>onLoad, onError</td>
-  <td></td>
-  </tr>
-
-  <tr>
-  <td><p>Animation</p></td>
-  <td>onAnimationStart, onAnimationEnd, onAnimationIteration</td>
-  <td>
-  animationName,
-  pseudoElement,
-  elapsedTime
-  </td>
-  </tr>
-
-  <tr>
-  <td><p>Transition</p></td>
-  <td>onTransitionEnd</td>
-  <td>
-  propertyName,
-  pseudoElement,
-  elapsedTime
-  </td>
-  </tr>
-
-</table>
-
-#### Notes
-
-* React normalizes events so that they behave consistently across different browsers.
-* Events in React are triggered on the bubbling phase. To trigger an event on the capturing phase add the word "Capture" to the event name (e.g. `onClick` would become `onClickCapture`).
-* If you need the browser event details for a given event you can access this by using the `nativeEvent` property found in the SyntheticEvent object passed into React event hander/callbacks.
-* React does not actually attach events to the nodes themselves, it uses [event delegation](http://domenlightenment.com/#11.14).
-* `e.stopPropagation()` or `e.preventDefault()` should be triggered manually to [stop](http://domenlightenment.com/#11.9) event [propagation](http://domenlightenment.com/#11.10) instead of `returning false;`.
-* Not all DOM events are provided by React. But you can still make use of them [using React lifecycle methods](https://facebook.github.io/react/tips/dom-event-listeners.html).
+* This code was purposefully simplistic in order to demonstrate component composition. In the next chapter will look at how the code will typically be written making use of props to create a generic `Badge` component. The generic Badge component can that take any name value v.s. creating a unique badge and hard coding the name in the component.
+* A key tenet of maintainable front-ends composable components. React components by design are meant to contain other React components.
+* Notice how HTML and previously defined components are mixed together in the `render()` configuration function.
