--- a/react-nodes/4.6.md
+++ b/react-nodes/4.6.md
@@ -1,8 +1,10 @@
-# Using Element Factories
+# Using Built-in Element Factories
 
 React provides built-in shortcuts for creating commonly used HTML element nodes. These shortcuts are called React element factories.
 
-Using a factory, the React element node `<li>one</li>` can be created like so:
+> A ReactElement-factory is simply a function that generates a ReactElement with a particular type property.
+
+Using a built-in element factory (i.e. `React.DOM.li()`), the React element node `<li>one</li>` can be created like so:
 
 ```js
 // uses React.DOM.li(props, children);
@@ -33,4 +35,4 @@ path,pattern,polygon,polyline,radialGradient,rect,stop,svg,text,tspa
 #### Notes
 
 * If you are using JSX you might not ever use factories
-* [Custom factories](http://facebook.github.io/react/docs/top-level-api.html#react.createfactory) using `React.createFactory(type)` can be created if needed.
+* [Custom factories](React has a built-in helper for you to create factories. It's effectively just: using `React.createFactory(type)` can be created if needed.
