--- a/react-props/7.1.md
+++ b/react-props/7.1.md
@@ -44,3 +44,8 @@ In the code example examined in this section the `BadgeList` component uses two 
 > [source code](https://jsfiddle.net/codylindley/Lv1zaudj/2/#tabs=js,result,html,resources)
 
 Basically every React component instance has a unique instance property call `props` that starts as an empty JavaScript object. The empty object can get filled, by a parent component, with any JavaScript value/ reference.
+
+#### Notes
+
+* In ES5 environments/engines you won’t be able to mutate `this.props` because its frozen (i.e. `Object.isFrozen(this.props) === true;` ).
+* You should consider `this.props` to be readonly.
