--- a/react-props/7.3.md
+++ b/react-props/7.3.md
@@ -1,6 +1,6 @@
 # Getting Component Props
 
-As discussed in section 6.5 a component instance can be accessed from any configuration option that uses a  function by way of the `this` keyword. For example, in the code below the `this` keyword is used to access the `Badge` `props` from the component `render` configuration option (i.e. `this.props.name`).
+As discussed in section 6.5 a component instance can be accessed from any configuration option that uses a function by way of the `this` keyword. For example, in the code below the `this` keyword is used to access the `Badge` `props` from the component `render` configuration option (i.e. `this.props.name`).
 
 ```
 var Badge = React.createClass({
@@ -30,4 +30,8 @@ var Badge = React.createClass({
 ReactDOM.render(React.createElement(Badge, { name: "Bill" }), document.getElementById('app'));
 ```
 
-The `{ name: "Bill" }` object is sent to the `createElement()` function along with a reference to the `Badge` component. The value, `{ name: "Bill" }` is set as an instance property value of the component accessbile from the `props` property (ie. `this.props.name === "Bill"`).
+The `{ name: "Bill" }` object is sent to the `createElement()` function along with a reference to the `Badge` component. The value, `{ name: "Bill" }` is set as an instance property value of the component accessible from the `props` property (ie. `this.props.name === "Bill"`).
+
+#### Notes
+
+* You should consider `this.props` to be readonly, don't set props using `this.props.PROP = 'foo'`.
