--- a/basic-react-components/6.5.md
+++ b/basic-react-components/6.5.md
@@ -1,15 +1,159 @@
-# Referring to a Component Instance
+# Defining Events on Components
 
-When a component is `render`'ed', a React component instance is created from the passed configuration options. One can gain access to this instance and it's properties (e.g., `this.props`) and methods (e.g., `this.setState`) in two ways.
+To define events on components, events and event handlers/callbacks (discussed in Ch. 4 - 4.7 and Ch. 5 - 5.8) can be added to React nodes inside of a components `render` configuration option.
 
-The first way is by using the `this` keyword from within a configuration function option. In the code example below all of the `console.log(this)` statements will refer to the component instance.
+In the code example, events are set on React nodes (via JSX) using what looks like component props.
 
-> [source code](https://jsfiddle.net/codylindley/xkz0ph2d/4/#tabs=js,result,html,resources)
+> [source code](https://jsfiddle.net/sjL64ogk/#tabs=js,result,html,resources)
 
-The other way to gain a reference to a component instance involves making use of the return value from calling `ReactDOM.render()`. In other words, the `ReactDOM.render()` function will return a reference to the top most rendered component.
+Basically, React when rendering a component looks for special React prop events (e.g. `onClick`) and treats these props differently from other props (all react events shown in table below). Obviously the difference being, that eventing is being wired up behind the scenes.
 
-> [source code](https://jsfiddle.net/codylindley/vavk9b5t/2/#tabs=js,result,html,resources)
+Part of this wiring is auto binding the context of the handler/callback to the scope of the component instance. In the code example below the value of this inside of the handlers/callbacks will reference the component instance itself.
+
+> [source code](https://jsfiddle.net/gke6vmc9/#tabs=js,result,html,resources)
+
+React supports the following events and event specific syntheticEvent properties:
+
+<table>
+<tr>
+<th>Event Type/Category:</th>
+<th>Events:</th>
+<th>Event Specific Properties:</th>
+</tr>
+  <tr>
+  	<td><p>Clipboard</p></td>
+    <td>onCopy, onCut, onPaste</td>
+	<td>DOMDataTransfer, clipboardData</td>
+  </tr>
+  <tr>
+  	<td><p>Composition</p></td>
+    <td>onCompositionEnd, onCompositionStart, onCompositionUpdate</td>
+	<td>data</td>
+  </tr>
+  <tr>
+  	<td><p>Keyboard</p></td>
+    <td>onKeyDown, onKeyPress, onKeyUp</td>
+	<td>altKey,
+charCode,
+ctrlKey,
+getModifierState(key),
+key,
+keyCode,
+locale,
+location,
+metaKey,
+repeat,
+shiftKey,
+which</td>
+  </tr>
+  <tr>
+	  <td><p>Focus</p></td>
+	<td>onChange, onInput, onSubmit</td>
+  <td>DOMEventTarget,  relatedTarget</td>
+  </tr>
+  <tr>
+	<td><p>Form</p></td>
+  <td>onFocus, onBlur</td>
+  <td></td>
+  </tr>
+  <tr>
+	<td><p>Mouse</p></td>
+  <td>onClick, onContextMenu, onDoubleClick, onDrag, onDragEnd, onDragEnter, onDragExit
+onDragLeave, onDragOver, onDragStart, onDrop, onMouseDown, onMouseEnter, onMouseLeave
+onMouseMove, onMouseOut, onMouseOver, onMouseUp</td>
+  <td>altKey,
+button,
+buttons,
+clientX,
+clientY,
+ctrlKey,
+getModifierState(key),
+metaKey,
+pageX,
+pageY,
+DOMEventTarget relatedTarget,
+screenX,
+screenY,
+shiftKey,
+  </td>
+  </tr>
+  <tr>
+  <td><p>Selection</p></td>
+  <td>onSelect</td>
+  <td></td>
+  </tr>
+  <tr>
+  <td><p>Touch</p></td>
+  <td>onTouchCancel, onTouchEnd, onTouchMove, onTouchStart</td>
+  <td>
+  altKey
+  DOMTouchList changedTouches,
+  ctrlKey,
+  getModifierState(key),
+  metaKey,
+  shiftKey,
+  DOMTouchList targetTouches,
+  DOMTouchList touches,
+  </td>
+  </tr>
+  <tr>
+  <td><p>UI</p></td>
+  <td>onScroll</td>
+  <td>
+  detail,
+  DOMAbstractView view
+  </td>
+  </tr>
+  <tr>
+  <td><p>Wheel</p></td>
+  <td>onWheel</td>
+  <td>
+  deltaMode,
+  deltaX,
+  deltaY,
+  deltaZ,
+  </td>
+  </tr>
+
+  <tr>
+  <td><p>Media</p></td>
+  <td>onAbort, onCanPlay, onCanPlayThrough, onDurationChange, onEmptied, onEncrypted, onEnded, onError, onLoadedData, onLoadedMetadata, onLoadStart, onPause, onPlay, onPlaying, onProgress, onRateChange, onSeeked, onSeeking, onStalled, onSuspend, onTimeUpdate, onVolumeChange, onWaiting</td>
+  <td></td>
+  </tr>
+
+  <tr>
+  <td><p>Image</p></td>
+  <td>onLoad, onError</td>
+  <td></td>
+  </tr>
+
+  <tr>
+  <td><p>Animation</p></td>
+  <td>onAnimationStart, onAnimationEnd, onAnimationIteration</td>
+  <td>
+  animationName,
+  pseudoElement,
+  elapsedTime
+  </td>
+  </tr>
+
+  <tr>
+  <td><p>Transition</p></td>
+  <td>onTransitionEnd</td>
+  <td>
+  propertyName,
+  pseudoElement,
+  elapsedTime
+  </td>
+  </tr>
+
+</table>
 
 #### Notes
 
-* The `this` keyword will commonly be used from within a component to access instance properties like `this.props.[NAME OF PROP]`, `this.props.children`, and `this.state`,. It will also be used to call class methods/properties, that all components share like `this.setState`, `this.forceUpdate()`.
+* React normalizes events so that they behave consistently across different browsers.
+* Events in React are triggered on the bubbling phase. To trigger an event on the capturing phase add the word "Capture" to the event name (e.g. `onClick` would become `onClickCapture`).
+* If you need the browser event details for a given event you can access this by using the `nativeEvent` property found in the SyntheticEvent object passed into React event hander/callbacks.
+* React does not actually attach events to the nodes themselves, it uses [event delegation](http://domenlightenment.com/#11.14).
+* `e.stopPropagation()` or `e.preventDefault()` should be triggered manually to [stop](http://domenlightenment.com/#11.9) event [propagation](http://domenlightenment.com/#11.10) instead of `returning false;`.
+* Not all DOM events are provided by React. But you can still make use of them [using React lifecycle methods](https://facebook.github.io/react/tips/dom-event-listeners.html).
