--- a/react-nodes/4.3.md
+++ b/react-nodes/4.3.md
@@ -23,3 +23,4 @@ The `ReactDOM.render()` function is how you get the React nodes from JSX/JavaScr
 * `ReactDOM.render()` does not modify the DOM element node in which you are rendering React. However, when rendering React wants complete ownership of the node. You should not add children to or remove children from a node in which React inserts a component.
 * Rendering to an HTML DOM is only one option with React, [other rendering APi's are available](https://facebook.github.io/react/docs/top-level-api.html#reactdomserver.rendertostring). For example, it is also possible to render to a string (i.e., `ReactDOMServer.renderToString()` from ) on the server-side.
 * Re-rendering to the same DOM element will only update the current child nodes if a change (i.e., diff) has occurred or a new child node have been added.
+* Don’t ever call `this.render()` yourself, leave that to React
