--- a/basic-react-components/6.10.md
+++ b/basic-react-components/6.10.md
@@ -1,14 +1,16 @@
 # Re-rendering A Component
 
-When creating a component you should already know after reading the first part of this chapter that calling `ReactDom.render()` will start the rendering of a component and all sub components.
+You should already know that calling `ReactDom.render()` is the initial kicking off of the rendering of a component and all sub components.
 
 After that, a re-rendered will occur when:
 
 1. A components `setState()` method is called
 2. A components `forceUpdate()` method is called
 
-Anytime a component is re-render (or render'ed) all of its children components are render'ed inside of the virtual DOM possibly causing a change to the real DOM (i.e. the UI).
+Anytime a component is re-render (or render'ed) all of its children components are render'ed inside of the virtual DOM possibly causing a change to the real DOM (i.e. the UI). The distinction I am making here is that just because a component is re-render in the virtual DOM, it does not follow always that an update to the DOM will occur.
 
-In the code example below `ReactDOM.render(< App / >, app);` start the first cascade of rendering, rendering `<App />` and `<Timer/>`. Then the `setInterval()` calls the `setState()` component method, which causes `<App />` and `<Timer/>` to be re-rendered. Note the UI changes when the state is changed. Lastly, using a `setTimeout()` I set the state on the `<App>` component wrongly (i.e. `this.state.now = 'foo';`), to demonstrate that `forceUpdate()` will cause a re-render of `<App />` and `<Timer />` that results in the UI show the string 'foo'.
+In the code example below `ReactDOM.render(< App / >, app);` starts the first cascade of rendering, rendering `<App />` and `<Timer/>`. The next re-render occurs when the `setInterval()` calls the `setState()` component method, which causes `<App />` and `<Timer/>` to be re-rendered.
 
 > [source code](https://jsfiddle.net/codylindley/ewewfxg0/#tabs=js,result,html,resources)
+
+Note the UI changes (i.e. the  DOM) when the state is changed. The next re-render occurs when the `setTimeout()` is invoked and the state on the `<App>` component is updated (i.e. `this.state.now = 'foo';`) causing a re-render of `<App />` and `<Timer />`, that results in the UI show the string 'foo' (NEVER UPDATE THE STATE LIKE I JUST DID, DID IT ONLY TO SHOW USE OF `this.forceUpdate()`).
