--- a/basic-react-components/6.2.md
+++ b/basic-react-components/6.2.md
@@ -74,7 +74,7 @@ A React component that will potentially contain `state` can be created by callin
 </tr>
 </table>
 
-The most important component configuration option is `render`. This configuration option is required and is a function that returns React nodes. All other component configurations are optional.
+The most important component configuration option is `render`. This configuration option is required and is a function that returns React nodes and components. All other component configurations are optional.
 
 The following code is an example of creating a `Timer` React component from React nodes using `React.createClass()`.
 
@@ -82,13 +82,69 @@ Make sure you read the comments in the code.
 
 > [source code](https://jsfiddle.net/12u58fjb/#tabs=js,result,html,resources)
 
-It looks like a lot of code. However, the bulk of the code simply involves creating a `Timer` component and passing the `createClass()` function creating the component a configuration object containing 5 properties (`getInitialState`, `tick`, `componentDidMount`, `componentWillUnmount`, `render`).
+It looks like a lot of code. However, the bulk of the code simply involves creating a `<Timer/>` component and then passing the `createClass()` function creating the component a configuration object containing 5 properties (`getInitialState`, `tick`, `componentDidMount`, `componentWillUnmount`, `render`).
 
-Notice that `Timer` is capitalized. When creating custom React components you need to capitalize the name of the component. Additionally, the value `this` among the configuration options refers to the component instance created. We'll discuss the component API in more detail at the end of this chapter. For now, just meditate on the configuration options available when defining a React component and how a reference to the component is achieved using the `this` keyword.
+Notice that `Timer` is capitalized. When creating custom React components you need to capitalize the name of the component. Additionally, the value `this` among the configuration options refers to the component instance created. We'll discuss the component API in more detail at the end of this chapter. For now, just meditate on the configuration options available when defining a React component and how a reference to the component is achieved using the `this` keyword. Also note, that in the code example above I added my own custom instance method (i.e. `tick`) during the creation of the `<Timer/>` component.
+
+Once a component is mounted (i.e created) you can use the component API. The api contains four methods.
+
+<table>
+	<tr>
+	  <th>API method</th>
+	  <th>Example</th>
+	  <th>Description</th>
+	</tr>
+  <tr>
+    <td><a href="https://facebook.github.io/react/docs/component-api.html#setstate"><code>setState()</code></a></td>
+    <td>
+	<code>
+		this.setState({mykey: 'my new value'});
+	</code>
+	<br><br>
+	<code>
+		this.setState(function(previousState, currentProps) {
+			return {myInteger: previousState.myInteger + 1};
+		});
+	</code>
+	</td>
+	<td>
+		Primary method used to re-render a component and sub components.
+	</td>
+  </tr>
+  <tr>
+	<td><a href="https://facebook.github.io/react/docs/component-api.html#replacestate"><code>replaceState()</code></a></td>
+	<td>
+	<code>
+		this.replceState({mykey: 'my new value'});
+	</code>
+	</td>
+	<td>Like <code>setState()</code> but does not merge old state just deletes it uses new object sent.</td>
+  </tr>
+  <tr>
+	<td><a href="https://facebook.github.io/react/docs/component-api.html#forceupdate"><code>forceUpdate()</code></a></td>
+	<td>
+	<code>
+		this.forceUpdate(function(){//callback});
+	</code>
+	</td>
+	<td>Calling <code>forceUpdate()</code> will cause <code>render()</code> to be called on the component, skipping <code>shouldComponentUpdate()</code>.</td>
+  </tr>
+  <tr>
+	<td><a href="https://facebook.github.io/react/docs/component-api.html#ismounted"><code>isMounted()</code></a></td>
+	<td>
+	<code>
+			this.isMounted()
+	</code>
+</td>
+	<td>isMounted() returns true if the component is rendered into the DOM, false otherwise. </td>
+  </tr>
+</table>
+
+The most commonly used component API method used will is `setState()`. Its usage will be covered in the React Component State chapter.
 
 #### Notes
 
-* The component callback configuration options (`componentWillUnmount`, `componentDidUpdate`, `componentWillUpdate`, `shouldComponentUpdate`, `componentWillReceiveProps`, `componentDidMount`, `componentWillMount`) are also known as "lifecycle methods" because these various methods are executed at specific points in a component's lifecycle.
+* The component callback configuration options (`componentWillUnmount`, `componentDidUpdate`, `componentWillUpdate`, `shouldComponentUpdate`, `componentWillReceiveProps`, `componentDidMount`, `componentWillMount`) are also known as "lifecycle methods" because these various methods are executed at specific points in a component's life.
 * The `React.createClass()` function is a convenience function that creates component instances (via JavaScript `new` keyword) for you.
 * The `render()` function should be a pure function. Which means:
 
