--- a/basic-react-components/6.5.md
+++ b/basic-react-components/6.5.md
@@ -1,14 +1,14 @@
 # Defining Events on Components
 
-To define events on components, events and event handlers/callbacks (discussed in Ch. 4 - 4.7 and Ch. 5 - 5.8) can be added to React nodes inside of a components `render` configuration option.
+Events can be added to React nodes inside of a components `render` configuration option (discussed in Ch. 4 - 4.7 and Ch. 5 - 5.8).
 
-In the code example, events are set on React nodes (via JSX) using what looks like component props.
+In the code example, two React events (i.e. `onClick` & `onMouseOver`) are set on React nodes (via JSX) using what looks like component props.
 
 > [source code](https://jsfiddle.net/sjL64ogk/#tabs=js,result,html,resources)
 
-Basically, React when rendering a component looks for special React prop events (e.g. `onClick`) and treats these props differently from other props (all react events shown in table below). Obviously the difference being, that eventing is being wired up behind the scenes.
+Basically, React when rendering a component looks for special React prop events (e.g. `onClick`) and treats these props differently from other props (all react events shown in table below). Obviously the difference being, that eventing in the real DOM is being wired up behind the scenes.
 
-Part of this wiring is auto binding the context of the handler/callback to the scope of the component instance. In the code example below the value of this inside of the handlers/callbacks will reference the component instance itself.
+Part of this wiring is auto binding the context of the handler/callback to the scope of the component instance. In the code example below the value of `this` inside of the handlers/callbacks will reference the component instance itself.
 
 > [source code](https://jsfiddle.net/gke6vmc9/#tabs=js,result,html,resources)
 
