--- a/react-basic-setup/3.3.md
+++ b/react-basic-setup/3.3.md
@@ -2,7 +2,7 @@
 
 Babel is not part of React. In fact, Babel's purpose isn't even that of a JSX transformer. Babel is a JavaScript compiler first.  It takes ES\* code and transforms it to run in browsers that don't support ES\* code. As of today, Babel mostly takes ES6 and ES7 code and transforms it into ES5 code. When doing these ECMAScript transformations it is trivial to also transform JSX expressions into `React.createElement()` calls. This is what we examined in the previous section.
 
-Given that Babel is the mechanism for transforming JSX, it additionally allows a developer to write future ES\* code.
+Given that Babel is the mechanism for transforming JSX, it additionally allows a developer to write futuristic ES\* code.
 
 In the HTML page below the familiar `HelloMessage` component has been re-written to [take advantage](http://babeljs.io/blog/2015/06/07/react-on-es6-plus/) of [ES6 classes](https://github.com/lukehoban/es6features#classes). So, not only is Babel transforming the JSX syntax, it is also transforming ES6 class syntax to ES5 syntax. Which can then be parsed by ES5 browser engines.
 
@@ -10,8 +10,8 @@ In the HTML page below the familiar `HelloMessage` component has been re-written
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="https://fb.me/react-0.14.4.js"></script>
-        <script src="https://fb.me/react-dom-0.14.4.js"></script>
+        <script src="https://fb.me/react-15.2.0.js"></script>
+        <script src="https://fb.me/react-dom-15.2.0.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     </head>
 <body>
@@ -97,5 +97,5 @@ Most of the [ES6 features](https://github.com/lukehoban/es6features) with a few 
 
 #### Notes
 
-* Obviously one can could still use Babel for it's intended purpose (i.e., compiling newer JavaScript code to older JavaScript code) without using JSX. However, most people using React are taking advantage of Babel for both ES\* and JSX transforming.
+* Obviously one can could still use Babel for it's intended purpose (i.e., compiling newer JavaScript code to older JavaScript code) without using JSX. However, most people using React are taking advantage of Babel for both unsupported ES\* features and JSX transforming.
 * Learn more about Babel by reading the [Babel handbook](https://github.com/thejameskyle/babel-handbook/blob/master/translations/en/user-handbook.md).
