--- a/react-props/7.2.md
+++ b/react-props/7.2.md
@@ -1,6 +1,6 @@
 # Sending Component Props
 
-Sending properties to a component entails adding HTML attribute like named values to the component when it is used, not when it is defined. For example, below the `Badge` component is define first. Then, to send a prop to the `Badge` component, `name="Bill"` is added to the component when it is used (i.e. `<Badge name="Bill" />`).
+Sending properties to a component entails adding HTML attribute like named values to the component when it is used, not when it is defined. For example, below the `Badge` component is define first. Then, to send a prop to the `Badge` component, `name="Bill"` is added to the component when it is used (i.e. When `<Badge name="Bill" />` is rendered).
 
 ```
 var Badge = React.createClass({
@@ -12,7 +12,7 @@ var Badge = React.createClass({
 ReactDOM.render(<Badge name="Bill" />, document.getElementById('app'));
 ```
 
-Keep in mind anywhere a component is used a property can be sent to it. For example, the code from the previous section demonstrates the use of the `Badge` component and name property from within the `BadgeList` component.
+Keep in mind anywhere a component is used a property can be sent to it. For example, the code from the previous section demonstrates the use of the `Badge` component and `name` property from within the `BadgeList` component.
 
 ```
 var Badge = React.createClass({
