--- a/react-props/7.5.md
+++ b/react-props/7.5.md
@@ -7,3 +7,5 @@ In the code example below I setup several default props containing several diffe
 > [source code](https://jsfiddle.net/u02vckfd/#tabs=js,result,html,resources)
 
 Note how the  `propArray` and `propObject` were overwritten with new values when the `MyComponent` instance is created.
+
+The main take away here is that you are not limited to string values when passing prop values.
