--- a/basic-react-components/6.4.md
+++ b/basic-react-components/6.4.md
@@ -1,6 +1,6 @@
 # Referring to a Component Instance
 
-When a component is `render`'ed', a React component instance is created from the passed configuration options. One can gain access to this instance and it's properties (e.g., `this.props`) and methods (e.g., `this.setState`) in two ways.
+When a component is `render`'ed', a React component instance is created from the passed configuration options. One can gain access to this instance and it's properties (e.g., `this.props`) and methods (e.g., `this.setState()`) in two ways.
 
 The first way is by using the `this` keyword from within a configuration function option. In the code example below all of the `console.log(this)` statements will refer to the component instance.
 
@@ -12,4 +12,4 @@ The other way to gain a reference to a component instance involves making use of
 
 #### Notes
 
-* The `this` keyword will commonly be used from within a component to access instance properties like `this.props.[NAME OF PROP]`, `this.props.children`, and `this.state`,. It will also be used to call class methods/properties, that all components share like `this.setState`, `this.forceUpdate()`.
+* The `this` keyword will commonly be used from within a component to access instance properties like `this.props.[NAME OF PROP]`, `this.props.children`, and `this.state`,. It will also be used to call class methods/properties, that all components share like `this.setState`, `this.replaceState()`.
