--- a/basic-react-components/6.7.md
+++ b/basic-react-components/6.7.md
@@ -1,8 +1,8 @@
 # Grokking Component Lifecycle's
 
-React components live certain life events that are called lifecycle's. These lifecycle's events are tied to lifecycle methods. I discussed several of these methods in section 6.2, which discusses creating components, because these methods are component configuration values set when defining/creating a component.
+React components live certain life events that are called lifecycle events. These lifecycle's events are tied to lifecycle methods. I discussed several of these methods at the start of this chapter when discusses the creation of components.
 
-The lifecycle methods provide hooks into the phases and the nature of a component. In the code example, take from section 6.2 (altered to unmount once it counts to 65), I am console logging the occurrence of the lifecycle `componentDidMount`, `componentWillUnmount`, and `getInitialState` lifecycle methods.
+The lifecycle methods provide hooks into the phases and the nature of a component. In the code example, taken from section 6.2, I am console logging the occurrence of the lifecycle events `componentDidMount`, `componentWillUnmount`, and `getInitialState` lifecycle methods.
 
 > [source code](https://jsfiddle.net/codylindley/s3v614b3/#tabs=js,result,html,resources)
 
@@ -12,48 +12,48 @@ Below I show a table for each category and the containing lifecycle methods.
 
 ###Mounting Phase (happens once in a components life):
 
-> The first phase of the React Component life cycle is the Birth/Mounting phase. This is where we start initialization of the Component. At this phase, the Component's props and state are defined and configured. The Component and all its children are mounted on to the Native UI Stack (DOM, UIView, etc.). Finally, we can do post-processing if required. The Birth/Mounting phase only occurs once. - [React In-depth](https://developmentarc.gitbooks.io/react-indepth/content/life_cycle/introduction.html)
+> "The first phase of the React Component life cycle is the Birth/Mounting phase. This is where we start initialization of the Component. At this phase, the Component's props and state are defined and configured. The Component and all its children are mounted on to the Native UI Stack (DOM, UIView, etc.). Finally, we can do post-processing if required. The Birth/Mounting phase only occurs once." - [React In-depth](https://developmentarc.gitbooks.io/react-indepth/content/life_cycle/introduction.html)
 
 <table>
 <th>Method</th>
 <th>Description</th>
 </tr>
   <tr>
-  	<td><p>getInitialState()</p></td>
+  	<td><p><code>getInitialState()</code></p></td>
     <td><p>is invoked before a component is mounted. Stateful components should implement this and return the initial state data.</p></td>
   </tr>
   <tr>
-	  <td><p>componentWillMount()</p></td>
+	  <td><p><code>componentWillMount()</code></p></td>
 	<td><p>is invoked immediately before mounting occurs.</p></td>
   </tr>
   <tr>
-	  <td><p>componentDidMount()</p></td>
+	  <td><p><code>componentDidMount()</code></p></td>
 	<td><p>is invoked immediately after mounting occurs. Initialization that requires DOM nodes should go here.</p></td>
   </tr>
 </table>
 
 ###Updating Phase (happens over and over in a components life):
 
-> The next phase of the life cycle is the Growth/Update phase. In this phase, we get new props, change state, handle user interactions and communicate with the component hierarchy. This is where we spend most of our time in the Component's life. Unlike Birth or Death, we repeat this phase over and over. - [React In-depth](https://developmentarc.gitbooks.io/react-indepth/content/life_cycle/introduction.html)
+> "The next phase of the life cycle is the Growth/Update phase. In this phase, we get new props, change state, handle user interactions and communicate with the component hierarchy. This is where we spend most of our time in the Component's life. Unlike Birth or Death, we repeat this phase over and over." - [React In-depth](https://developmentarc.gitbooks.io/react-indepth/content/life_cycle/introduction.html)
 
 <table>
 <th>Method</th>
 <th>Description</th>
 </tr>
   <tr>
-  	<td><p>componentWillReceiveProps(object nextProps)</p></td>
+  	<td><p><code>componentWillReceiveProps(object nextProps)</code></p></td>
     <td><p>is invoked when a mounted component receives new props. This method should be used to compare this.props and nextProps to perform state transitions using this.setState().</p></td>
   </tr>
   <tr>
-	  <td><p>shouldComponentUpdate(object nextProps, object nextState)</p></td>
+	  <td><p><code>shouldComponentUpdate(object nextProps, object nextState)</code></p></td>
 	<td><p>is invoked when a component decides whether any changes warrant an update to the DOM. Implement this as an optimization to compare this.props with nextProps and this.state with nextState and return false if React should skip updating.</p></td>
   </tr>
   <tr>
-	  <td><p>componentWillUpdate(object nextProps, object nextState)</p></td>
+	  <td><p><code>componentWillUpdate(object nextProps, object nextState)</code></p></td>
 	<td><p>is invoked immediately before updating occurs. You cannot call this.setState() here.</p></td>
   </tr>
   <tr>
-	<td><p>componentDidUpdate(object prevProps, object prevState)</p></td>
+	<td><p><code>componentDidUpdate(object prevProps, object prevState)</code></p></td>
   <td><p>is invoked immediately after updating occurs.
 </p></td>
   </tr>
@@ -61,14 +61,14 @@ Below I show a table for each category and the containing lifecycle methods.
 
 ###Unmounting Phase (happens once in a components life):
 
-> The final phase of the life cycle is the Death/Unmount phase. This phase occurs when a component instance is unmounted from the Native UI. This can occur when the user navigates away, the UI page changes, a component is hidden (like a drawer), etc. Death occurs once and readies the Component for Garbage Collection. - [React In-depth](https://developmentarc.gitbooks.io/react-indepth/content/life_cycle/introduction.html)
+> "The final phase of the life cycle is the Death/Unmount phase. This phase occurs when a component instance is unmounted from the Native UI. This can occur when the user navigates away, the UI page changes, a component is hidden (like a drawer), etc. Death occurs once and readies the Component for Garbage Collection." - [React In-depth](https://developmentarc.gitbooks.io/react-indepth/content/life_cycle/introduction.html)
 
 <table>
 <th>Method</th>
 <th>Description</th>
 </tr>
   <tr>
-  	<td><p>componentWillUnmount()</p></td>
+  	<td><p><code>componentWillUnmount()</code></p></td>
     <td><p>is invoked immediately before a component is unmounted and destroyed. Cleanup should go here.</p></td>
   </tr>
 </table>
@@ -76,8 +76,7 @@ Below I show a table for each category and the containing lifecycle methods.
 ### Notes
 
 * `componentDidMount` and `componentDidUpdate` is a good places to put other libraries' logic.
-* `component.forceUpdate()` can be invoked on any mounted component when you know that some deeper aspect of the component's state has changed without using `this.setState()`.
-* Read [React In-depth](https://developmentarc.gitbooks.io/react-indepth/content/life_cycle/introduction.html) for a detailed look into the React component life cycle
+* Read [React In-depth](https://developmentarc.gitbooks.io/react-indepth/content/life_cycle/introduction.html) for a detailed look into the React component lifecycle events
 * Mounting Phase follows this order:
 <ol>
 <li>Initialize / Construction</li>
