--- a/basic-react-components/6.8.md
+++ b/basic-react-components/6.8.md
@@ -18,23 +18,23 @@ Given that `this.props.children` can potentially contain a wide set of nodes and
 <th>Description</th>
 </tr>
   <tr>
-  	<td><p>React.Children.map</p></td>
+  	<td><p><code>React.Children.map(this.props.children, function(){})</code></p></td>
     <td><p>Invoke fn on every immediate child contained within children with this set to thisArg. If children is a keyed fragment or array it will be traversed: fn will never be passed the container objects. If children is null or undefined returns null or undefined rather than an array.</p></td>
   </tr>
   <tr>
-  	<td><p>React.Children.forEach</p></td>
+  	<td><p><code>React.Children.forEach(this.props.children, function(){})</code></p></td>
     <td><p>Like React.Children.map() but does not return an array.</p></td>
   </tr>
   <tr>
-  	<td><p>React.Children.count</p></td>
+  	<td><p><code>React.Children.count(this.props.children)</code></p></td>
     <td><p>Return the total number of components in children, equal to the number of times that a callback passed to map or forEach would be invoked.</p></td>
   </tr>
   <tr>
-  	<td><p>React.Children.only</p></td>
+  	<td><p><code>React.Children.only(this.props.children)</code></p></td>
     <td><p>Return the only child in children. Throws otherwise.</p></td>
   </tr>
   <tr>
-  	<td><p>React.Children.toArray</p></td>
+  	<td><p><code>React.Children.toArray(this.props.children)</code></p></td>
     <td><p>Return the children opaque data structure as a flat array with keys assigned to each child. Useful if you want to manipulate collections of children in your render methods, especially if you want to reorder or slice this.props.children before passing it down.</p></td>
   </tr>
 </table>
