--- a/react-nodes/4.4.md
+++ b/react-nodes/4.4.md
@@ -5,7 +5,7 @@ The second argument that is passed to `React.createElement(type, props, children
 Props take on several roles:
 
 1. Props can become HTML attributes. If a prop matches a known HTML attribute then it will be added to the final HTML element in the DOM.
-2. Props passed to `createElement()` become values stored in a `prop` object as an instance property of `React.createElement()` instances  (i.e., `[INSTANCE].props.[NAME OF PROP]`).
+2. Props passed to `createElement()` become values stored in a `prop` object as an instance property of `React.createElement()` instances  (i.e., `[INSTANCE].props.[NAME OF PROP]`). Props by enlarge are used to input values into components.
 3. A few special props have side effects (e.g., [`key`](https://facebook.github.io/react/docs/multiple-components.html#dynamic-children), [`ref`](https://facebook.github.io/react/docs/more-about-refs.html), and [`dangerouslySetInnerHTML`](https://facebook.github.io/react/tips/dangerously-set-inner-html.html))
 
 In one sense you can think of props as the configuration options for React nodes and in another sense you can think of them as HTML attributes.
@@ -42,7 +42,7 @@ The `foo` attribute/prop does not show up in the real DOM. This non-standard HTM
 
 > [source code](https://jsfiddle.net/codylindley/8ca0z80m/1/#tabs=js,result,html,resources)
 
-React attributes/props not only translate to real HTML attributes props but can also become configuration values that can be passed to React components. This aspect of props will be covered in the React props chapter. For now simply realize that passing a React node a prop is different from defining a prop on a component to be used as configuration input within a component.
+React attributes/props not only translate to real HTML attributes props but can also become configuration values that can be passed to React components. This aspect of props will be covered in the React component props chapter. For now simply realize that passing a React node a prop is different from defining a prop on a component to be used as configuration input within a component.
 
 #### Notes
 
