small grammar in Stave vs Props

--- a/react-state/8.3.md
+++ b/react-state/8.3.md
@@ -21,4 +21,4 @@ State:
 3. State can only be mutated by the component that contains the state, it is private in this sense.
 4. Don't mutate the state of child components. A component should never have shared mutable state.
 5. State should only contain the minimal amount of data needed to represent your UI's state, it should not contain computed data, other React components, or duplicated data from props.
-6. State should be avoid if at all possible. i.e. stateless components are ideal, stateful components add complexity. The React documentation suggest: "A common pattern is to create several stateless components that just render data, and have a stateful component above them in the hierarchy that passes its state to its children via props. The stateful component encapsulates all of the interaction logic, while the stateless components take care of rendering data in a declarative way."
+6. State should be avoided if at all possible. i.e. stateless components are ideal, stateful components add complexity. The React documentation suggest: "A common pattern is to create several stateless components that just render data, and have a stateful component above them in the hierarchy that passes its state to its children via props. The stateful component encapsulates all of the interaction logic, while the stateless components take care of rendering data in a declarative way."
